tests/negative/regression/r38.orng
fn main() -> Int { 
    const a: @typeof( fn () -> () { } )
} 
